Archive2/64/f92444cc4a0ce4/output
main.cpp:28:15: error: ISO C++ forbids declaration of 'x' with no type [-fpermissive]
     x(const X&) {}
               ^
main.cpp: In member function 'int X::x(const X&)':
main.cpp:28:18: warning: no return statement in function returning non-void [-Wreturn-type]
     x(const X&) {}
                  ^
